styles/globals.scss
@import "slick-carousel/slick/slick.css";
@import "slick-carousel/slick/slick-theme.css";

html,
body {
  padding: 0;
  margin: 0;
  font-family: "Quicksand", sans-serif;
  color: #4f4f4f;

  @media screen and (max-width: 768px) {
    font-size: 14px;
  }

  @media screen and (max-width: 576px) {
    font-size: 12px;
  }
}

* {
  box-sizing: border-box;
}

.navbar-nav {
  display: flex;
  justify-content: end;
  width: 100%;
}

.title-header {
  color: rgb(255, 0, 0);
  text-align: center;
  font-size: 2rem;
  font-weight: 1000;
  padding: 2rem 0px 1rem 0px;
}

.white-text{
  color: white;
}

.display-mark{
  opacity: 1 !important;
}

.row{
  justify-content: center;
}

